[workspace]

resolver = "2"

members = [ "basecoin", "basecoin/app", "basecoin/modules", "basecoin/store" ]

[workspace.package]
version      = "0.2.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.75"
readme       = "README.md"
repository   = "https://github.com/informalsystems/basecoin-rs"
authors      = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
# external dependencies
base64             = { version = "0.22.1", default-features = false, features = [ "alloc" ] }
cosmrs = { path = "../cosmos-rust/cosmrs" }
displaydoc         = { version = "0.2", default-features = false }
derive_more        = { version = "1.0.0", default-features = false, features = [ "from", "into", "try_into", "display" ] }
ed25519            = { version = "2.2.3", default-features = false }
prost              = { version = "0.14.3", default-features = false }
serde_derive       = { version = "1.0", default-features = false }
serde              = "1.0"
serde_json         = "1.0"
sha2               = "0.10.8"
tonic              = "0.14.5"
tonic-reflection   = "0.14.5"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"
primitive-types    = { version = "0.13.1", default-features = false }

# ibc dependencies
ibc = { path = "../ibc-rs/ibc" }
ibc-query = { path = "../ibc-rs/ibc-query" }
ibc-proto = { path = "../ibc-proto-rs" }
ics23 = { path = "../ics23/rust" }

# tendermint dependencies
tendermint = { path = "../tendermint-rs/tendermint" }
tendermint-abci = { path = "../tendermint-rs/abci" }
tendermint-proto = { path = "../tendermint-rs/proto" }
tendermint-rpc = { path = "../tendermint-rs/rpc" }

# tower abci
tower-abci = { path = "../tower-abci" }

