[workspace]

resolver = "2"

members = [ "basecoin", "basecoin/app", "basecoin/modules", "basecoin/store" ]

[workspace.package]
version      = "0.2.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.75"
readme       = "README.md"
repository   = "https://github.com/informalsystems/basecoin-rs"
authors      = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
# external dependencies
base64             = { version = "0.22.1", default-features = false, features = [ "alloc" ] }
cosmrs = { git = "https://github.com/permissionlessweb/cosmos-rust", branch = "zk-mvp" }
displaydoc         = { version = "0.2", default-features = false }
derive_more        = { version = "1.0.0", default-features = false, features = [ "from", "into", "try_into", "display" ] }
ed25519            = { version = "2.2.3", default-features = false }
prost              = { version = "0.14.3", default-features = false }
serde_derive       = { version = "1.0", default-features = false }
serde              = "1.0"
serde_json         = "1.0"
sha2               = "0.10.8"
tonic              = "0.14.5"
tonic-reflection   = "0.14.5"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"
primitive-types    = { version = "0.13.1", default-features = false }

# ibc dependencies
ibc = { git = "https://github.com/permissionlessweb/ibc-rs", branch = "zk-mvp" }
ibc-query = { git = "https://github.com/permissionlessweb/ibc-rs", branch = "zk-mvp" }
ibc-proto = { git = "https://github.com/permissionlessweb/ibc-proto-rs", branch = "zk-mvp" }
ics23 = { git = "https://github.com/permissionlessweb/ics23", branch = "zk-mvp" }

# tendermint dependencies
tendermint = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-abci = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-proto = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-rpc = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }

# tower abci
tower-abci = { git = "https://github.com/permissionlessweb/tower-abci", branch = "zk-mvp" }

